--- a/INDEX.html
+++ b/INDEX.html
@@ -1,3 +1,4 @@
+<!-- Terrance Harris -->
 <!-- tells browers this is compatiple page -->
 <!DOCTYPE html>
 <!-- required opening tag -->
@@ -13,15 +14,30 @@
 </head>
         <body>
             <!-- everything we want to show the user -->
-
+            <header>
+             <!--navigation menu selection  -->
+            <nav>
+                <!-- a tag is the anchor tag making a hyper link -->
+              <a href="INDEX.html">Home</a>&nbsp;
+              <a href="Boards.html">Boards</a>
+             </nav>
+            </header>
+         <!-- create a headear sectoon -->
          <h1>Welcome to my CSC 102 page</h1>
          <!-- paragraph that will be spacing for before and after p tags -->
          <p>
         
-         <img id="memeImage" src="" alt="memeImage">
+         <img id="" src="" alt="memeImage">
          </p>
-<!-- header text -->
 
+<!-- add footer at the bottom of the page -->
+<footer>
+    <!-- Br creates a new line -->
+    Terrance Harris <br>
+    University of Advancing Techonology <br>
+    2625 W baseline Rd. <br>
+    Tempe, AZ 85283
+</footer>
         </body>
         <!-- closing tag at teh bottom ofevery page -->
         <!-- closing html at the end of every file -->
