--- a/Boards.html
+++ b/Boards.html
@@ -17,7 +17,12 @@
             <!-- everything we want to show the user -->
             <!-- header text -->
          <h1>Program Objectives for ACS Majors</h1>
-         <!-- paragraph that will be spacing for before and after p tags -->
+        <!-- paragraph that will be spacing for before and after p tags -->
+        <nav>
+            <!-- a tag is the anchor tag making a hyper link -->
+          <a href="INDEX.html">Home</a>&nbsp;
+          <a href="Boards.html">Boards</a>
+         </nav>
          <p>
             GRADUATION REQUIREMENTS
             <!-- ordered list code -->
