--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,7 @@
     <!-- This tittle will appar in the browser tab. Make it short and descriptive -->
     <!-- Links Css file to HTML file rel tells browser what our style is -->
     <link href="First CSS.css" rel="stylesheet">
+    <script src="game code.js"></script>
 </head>
         <body>
             <!-- everything we want to show the user -->
@@ -28,10 +29,13 @@
          <h1>Welcome to my CSC 102 page</h1>
          <!-- paragraph that will be spacing for before and after p tags -->
          <p>
-        
-         <img id="memeimage" src="meme image.jpg" alt="memeimage">
-         </p>
-
+         <img id="memeimage" src="code meme.png" alt="memeimage">
+         
+             <!-- Button will move image around -->
+             <input type="button" onclick="MoveImage();" value="Move image">
+             <!-- Button will stop image -->
+             <input type="button" onclick="StopImage();" value="Stop image">
+            <p\>
 <!-- add footer at the bottom of the page -->
 <footer>
     <!-- Br creates a new line -->
@@ -40,6 +44,7 @@
     2625 W baseline Rd. <br>
     Tempe, AZ 85283
 </footer>
+
         </body>
         <!-- closing tag at teh bottom ofevery page -->
         <!-- closing html at the end of every file -->
