--- a/Incorp sound.html
+++ b/Incorp sound.html
@@ -6,6 +6,25 @@
     <title>Ugandan knucks</title>
     <!-- add link to java script -->
     <script src="game code.js"></script>
+    <link href="First CSS.css" rel="stylesheet">
+    <main>
+        <nav>
+            <!-- unordered list -->
+            <ul>
+                <li> <a href="INDEX.html">Home</a></li>
+                <li><a href="Boards.html">Boards</a></li>
+                <li><a href="Game.html">Game</a></li>
+                <li><a href="Palindrome testimg.html">Palindrome</a></li>
+                <li><a href="Basics.html">Basics</a></li>
+                <li><a href="String Html.html">Strings</a></li>
+                <li><a href="Incorp sound.html">Sound</a></li>
+                <li><a href="Table code.html">Table</a></li>
+                <li><a href="Pizza.html">Pizza</a></li>
+            </ul>
+            <!-- a tag is the anchor tag making a hyper link -->
+          
+         </nav>
+         </main>
 </head>
 <body>
     <!--Page title  -->
