--- a/Table code.html
+++ b/Table code.html
@@ -5,7 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Html Table</title>
     <link href="First CSS.css" rel="stylesheet">
-    
+    <main>
+        <nav>
+            <!-- unordered list -->
+            <ul>
+                <li> <a href="INDEX.html">Home</a></li>
+                <li><a href="Boards.html">Boards</a></li>
+                <li><a href="Game.html">Game</a></li>
+                <li><a href="Palindrome testimg.html">Palindrome</a></li>
+                <li><a href="Basics.html">Basics</a></li>
+                <li><a href="String Html.html">Strings</a></li>
+                <li><a href="Incorp sound.html">Sound</a></li>
+                <li><a href="Table code.html">Table</a></li>
+                <li><a href="Pizza.html">Pizza</a></li>
+            </ul>
+            <!-- a tag is the anchor tag making a hyper link -->
+          
+         </nav>
+         </main>
 </head>
 <body>
     <h1>This is an example of a table written in HTML</h1>
