--- a/Index.html
+++ b/Index.html
@@ -14,15 +14,29 @@
     <!-- Links Css file to HTML file rel tells browser what our style is -->
     <link href="First CSS.css" rel="stylesheet">
     <script src="game code.js"></script>
+
+   
+    
 </head>
         <body>
             <!-- everything we want to show the user -->
             <header>
              <!--navigation menu selection  -->
             <nav>
+                <!-- unordered list -->
+                <ul>
+                    <li> <a href="INDEX.html">Home</a></li>
+                    <li><a href="Boards.html">Boards</a></li>
+                    <li><a href="Game.html">Game</a></li>
+                    <li><a href="Palindrome testimg.html">Palindrome</a></li>
+                    <li><a href="Basics.html">Basics</a></li>
+                    <li><a href="String Html.html">Strings</a></li>
+                    <li><a href="Incorp sound.html">Sound</a></li>
+                    <li><a href="Table code.html">Table</a></li>
+                    <li><a href="Pizza.html">Pizza</a></li>
+                </ul>
                 <!-- a tag is the anchor tag making a hyper link -->
-              <a href="INDEX.html">Home</a>&nbsp;
-              <a href="Boards.html">Boards</a>
+              
              </nav>
             </header>
          <!-- create a headear sectoon -->
